# Beyond-the-Thermostat-Advancing-Building-Automation-with-Thermal-Digital-Twins

./: README.md  data_processing.py  heatmap_data.json  index.html  progress.html  progress_updated.html  project_page.html  pyproject.toml  research.html
assets/tcmodel/images/: subset_model_vs_baselines.csv  subset_query_time10.csv  (+2 more)
data/Sample00/: Time00.xlsx
data/Sample02/: Humidity02.xlsx  RSSI02.xlsx  Sample02.mat  Temperature02.xlsx  Time02.xlsx
data/Sample03/: Time03.xlsx
data/Sample04/: Humidity04.xlsx  RSSI04.xlsx  Sample04.mat  Temperature04.xlsx  Time04.xlsx
data/Sample05/: Time05.xlsx
data/Sample06/: Humidity06.xlsx  RSSI06.xlsx  Sample06.mat  Temperature06.xlsx  Time06.xlsx
data/Sample07/: Humidity07.xlsx  Sample07.mat  Temperature07.xlsx  Time07.xlsx
data/lab1/: Humidity_PC1_5min.xlsx  RSSI_5min.xlsx  Temperature_5min.xlsx  Temperature_5min_sg.xlsx  Time_5min.xlsx
data/lab2/: Humidity_5min.xlsx  Temperature_5min.xlsx  Time_5min.xlsx
data/s0/: Humidity_5min.xlsx
deepOnet/: deepOnet_v0.1.py  deepOnet_v0.2.0.py  deepOnet_v0.2.1.py  deepOnet_v0.2.2.py  deepOnet_v0.3.1.py  deepOnet_v0.4.1.py  deepOnet_v0.5.1.py  deepOnet_v0.5.2.py  deepOnet_v0.5.3.py  deepOnet_v0.5.4.py  deepOnet_v0.5.5.py  deepOnet_v0.5.6.py  deepOnet_v0.6.1.py  deepOnet_v0.6.2.py  deepOnet_v0.6.3.py  deepOnet_v0.7.1.py  deepOnet_v0.7.2.py  deeponet_final.pth  deeponet_meta.json  deeponet_train.py
deepOnet/old/: config_lab1_temperature_step1.json  deeponet_best.pth  deeponet_eval.py  deeponet_eval_metrics.csv
deeponet_viz/: index.html
eval/: sensor_interactive.html
(+136 files in other folders)
