[project]
name = "deepOnet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy==1.23.5",
    "pandas==1.5.3",
    "psychrolib==2.5.0",
    "pyyaml==6.0.1",
    "scipy==1.13.0",
    "torch>=2.0.0",
]
