[project]
name = "thermodt"
version = "0.1.0"
description = "Thermal Digital Twin for buildings using Physics-Informed Neural Operators (DeepONet/PINN) trained on real wireless sensor data"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Nueraili, David, Justin, Mario"  },
]
keywords = ["digital-twin", "deeponet", "pinn", "thermal", "building-automation", "physics-informed"]
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy==1.23.5",
    "openpyxl>=3.1.5",
    "pandas==1.5.3",
    "psychrolib==2.5.0",
    "pyyaml==6.0.1",
    "scipy==1.13.0",
    "torch>=2.0.0",
]


